// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CProgressBar customize 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="progress-bar bg-warning progress-bar-striped progress-bar-animated bazinga"
    role="progressbar"
    style="width: 50%;"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CProgressBar component 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="progress-bar bg-warning"
    role="progressbar"
    style="width: 0%;"
  >
    Test
  </div>
</div>
`;
